<resources>
    <string name="app_name">Pic Off</string>
    <string name="title_home">Home</string>
    <string name="title_challenges">Challenge</string>
    <string name="title_friends">Friends</string>
    <string name="fab_content_desc">Press to start new challenge</string>
    <string name="button_received">Received</string>
    <string name="button_sent">Sent</string>
    <string name="fap1_text">Random</string>
    <string name="fab2_text">Start new</string>
    <string name="fab3_text">List challenges</string>
    <string name="fab1_content_desc">Start with a random challenge</string>
    <string name="fab2_content_desc">Create a new challenge</string>
    <string name="fab3_content_desc">Jump to the challenge list</string>
    <string name="title_activity_new_challenge">NewChallengeActivity</string>
    <string name="buttonSave">Upload</string>
    <string name="hintNewChallengeTitle">Title</string>
    <string name="hintNewChallengeDescription">Enter challenge description here</string>
    <string name="text_loading_challenges">Loading challenges.....</string>
    <string name="text_loading_pending_challenges">Loading pending challenges.....</string>
    <string name="text_loading_friends">Loading friends...</string>
    <string name="text_no_pending_challenges">No pending challenges.</string>
    <string name="preference_file_key">com.example.picoff.PREFERENCE_FILE_KEY</string>
    <string name="btn_log_out">Log\nout</string>
    <string name="edittext_hint_search_friend">Search to add new amigo</string>
    <string name="string_create_new_challenge_title">Create new challenge</string>
    <string name="hint_additional_info">Write some additional information, e.g. how many push ups you did</string>
    <string name="tv_select_friend_title">Select friend to challenge</string>
    <string name="reminders_notification_channel_id">REMINDER_NOTIFICATION_CHANNEL_ID</string>
    <string name="title_notification_reminder">PIC OFF misses you!</string>
    <string name="description_notification_reminder">Start a new challenge with your friends!</string>
    <string name="reminders_notification_channel_name">REMINDERS_NOTIFICATION_CHANNEL</string>
</resources>