<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_home"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/buttonReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:text="@string/button_received"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonSent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/button_sent"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonReceived"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonReceived" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReceived"
        android:name="com.example.picoff.ui.home.PendingChallengeFragment"
        tools:layout="@layout/fragment_pending_challenge">

    </androidx.fragment.app.FragmentContainerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/fab_content_desc"
        app:tint="@color/fab_text_color"
        android:backgroundTint="@color/fab_color"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/activity_home"
        app:layout_constraintRight_toRightOf="@+id/activity_home"
        app:srcCompat="@android:drawable/ic_input_add" />

    <LinearLayout
        android:id="@+id/randomChallengeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/createNewLayout"
        app:layout_constraintRight_toRightOf="@+id/activity_home">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="5dp">
        <TextView
            android:id="@+id/randomChallengeLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:fontFamily="sans-serif"
            android:background="@color/fab_color"
            android:textColor="@android:color/white"
            android:padding="5dip"
            android:text="@string/fap1_text"
            android:typeface="normal" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabRandomChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:tint="@color/fab_text_color"
            android:backgroundTint="@color/fab_color"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/fab1_content_desc" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/createNewLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/listChallengesLayout"
        app:layout_constraintRight_toRightOf="@+id/activity_home">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="5dp">
        <TextView
            android:id="@+id/createNewLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:fontFamily="sans-serif"
            android:padding="5dip"
            android:text="@string/fab2_text"
            android:background="@color/fab_color"
            android:textColor="@android:color/white"
            android:typeface="normal" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCreateNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:tint="@color/fab_text_color"
            android:backgroundTint="@color/fab_color"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/fab2_content_desc" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listChallengesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fabBase"
        app:layout_constraintRight_toRightOf="@+id/activity_home">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="5dp">
        <TextView
            android:id="@+id/listChallengesLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:fontFamily="sans-serif"
            android:padding="5dip"
            android:text="@string/fab3_text"
            android:background="@color/fab_color"
            android:textColor="@android:color/white"
            android:typeface="normal" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabListChallenges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:tint="@color/fab_text_color"
            android:backgroundTint="@color/fab_color"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/fab3_content_desc" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>